fix: consistent spacing context menu

--- a/src/css/context-menu.css
+++ b/src/css/context-menu.css
@@ -5,8 +5,8 @@
 
     &.active {
 
-        & > svg {
-            color: var(--primary-color);
+        & > svg {            
+            color: var(--primary-color);            
         }
     }
 
@@ -25,7 +25,7 @@
         background: var(--grey-400);
         border: 1px solid var(--grey-300);
         box-shadow: var(--shadow);        
-        margin-left: var(--space-3);
+        margin-left: var(--space-2);
         position: absolute;
         z-index: 10;
 
